--- a/flappybatta/src/main/AndroidManifest.xml
+++ b/flappybatta/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
-<manifest package="cn.iam007.plugin.flappybatta"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="cn.iam007.plugin.flappybatta"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application android:allowBackup="true">
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="Flappy Batta">
 
     </application>
 
