--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -32,6 +32,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+
+    //LeanCloud为了解决部分第三方库重复打包了META-INF的问题
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 task clearJar(type: Delete) {
@@ -59,4 +69,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:support-v4:22.2.0'
+
+    //avoscloud-sdk 为 LeanCloud基础包，主要是提供插件后台管理接口
+    compile 'cn.leancloud.android:avoscloud-sdk:v3.+'
 }
