--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':framework', ':flappybatta', ':demo'
+include ':framework', ':plugin-flappybatta', ':demo', ':plugin-2048'
 
 //project(':interface').projectDir = new File(rootProject.projectDir, 'interface')
