--- a/plugin-flappybatta/build.gradle
+++ b/plugin-flappybatta/build.gradle
@@ -23,5 +23,7 @@ dependencies {
 //    compile fileTree(dir: 'libs', include: ['*.jar'])
 //    compile 'com.android.support:appcompat-v7:22.2.0'
 //    provided project(":framework")
-    provided files('libs/classes.jar', 'libs/android-support-v4.jar')
+    provided files('libs/android-support-v4.jar', "libs/classes.jar")
+
+//    compile project(":plugin-framework")
 }
