--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':framework', ':plugin-flappybatta', ':demo', ':plugin-2048', ':plugin-framework'
+include ':plugin-flappybatta', ':demo', ':plugin-2048', ':plugin-framework'
 
 //project(':interface').projectDir = new File(rootProject.projectDir, 'interface')
